--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -27,10 +27,10 @@ RUN apt-get install tzdata
 
 # Install pip3
 RUN apt-get -y install python3-pip
-RUN pip install --upgrade pip
+#RUN pip install --upgrade pip
 
 # Build essentials
-RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
+#RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 
 # Build/Install cryptography
 #RUN pip3 install cryptography
