--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -22,7 +22,7 @@ COPY --from=qemu qemu-arm-static /usr/bin
 ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
 
 # Update base image if necessary
-RUN apt-get update && apt-get upgrade
+RUN apt-get -y update && apt-get -y upgrade
 SHELL ["/bin/bash", "-c"]
 
 RUN apt-get install tzdata
