--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -29,7 +29,9 @@ RUN apt-get install tzdata
 
 # Install pip3
 RUN apt-get -y install python3-pip
-RUN pip install --upgrade pip
+RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
+
+#  RUN pip install --upgrade pip
 
 # Build essentials
 #RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
