--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -36,8 +36,11 @@ RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 # Build essentials
 RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 
+RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+ENV PATH="/root/.cargo/bin:$PATH"
+
 # Build/Install cryptography
-RUN pip3 install cryptography
+# RUN pip3 install cryptography
 
 # Install requiered python packages
 #RUN pip3 install rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
