--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -18,29 +18,32 @@ FROM balenalib/armv7hf-python:3.9
 # Add QEMU
 COPY --from=qemu qemu-arm-static /usr/bin
 
+# Install some optional helper tools
+RUN apt-get -y install mc
+
+RUN mkdir /root/.cargo
+RUN mount -t tmpfs -o size=2048m tmpfs /root/.cargo
+
 # Set timezone and interactive mode
-ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
+#ENV TZ=Europe/Berlin DEBIAN_FRONTEND=noninteractive
 
 # Update base image if necessary
-RUN apt-get -y update && apt-get -y upgrade
+#RUN apt-get -y update && apt-get -y upgrade
 # SHELL ["/bin/bash", "-c"]
 
-RUN apt-get install tzdata
+#RUN apt-get install tzdata
 
 # Install pip3
 # RUN apt-get -y install python3-pip
-RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
+#RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 
 #  RUN pip install --upgrade pip
 
 # Build essentials
-RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
+#RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 
-RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
-ENV PATH="/root/.cargo/bin:$PATH"
-
-RUN mkdir ~/.cargo
-#  RUN mount -t tmpfs -o size=2048m tmpfs ~/.cargo
+#RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+#ENV PATH="/root/.cargo/bin:$PATH"
 
 # Build/Install cryptography
 # RUN pip3 install cryptography
