--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -28,27 +28,26 @@ RUN apt-get -y update && apt-get -y upgrade
 # Install some optional helper tools
 RUN apt-get -y install mc
 
-RUN cp /root/.cargo /root/.cargo.bak
-RUN --mount=type=tmpfs,target=/root/.cargo cp -r /root/.cargo.bak/. /root/.cargo/
-
-
-#RUN mkdir /root/.cargo
-#RUN mount -t tmpfs -o size=2048m tmpfs /root/.cargo
-
-
-#RUN apt-get install tzdata
+RUN apt-get install tzdata
 
 # Install pip3
 # RUN apt-get -y install python3-pip
-#RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
+RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 
 #  RUN pip install --upgrade pip
 
 # Build essentials
-#RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
+RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 
-#RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
-#ENV PATH="/root/.cargo/bin:$PATH"
+RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
+ENV PATH="/root/.cargo/bin:$PATH"
+
+#RUN --mount=type=tmpfs,target=/build \
+#    cp -r /src/. /build/ \
+# && cd /build \
+# && make your_project \
+# && cp /build/result.bin /result.bin
+#...
 
 # Build/Install cryptography
 # RUN pip3 install cryptography
