--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -46,7 +46,7 @@ RUN cp -R /root/.cargo /root/.cargo.bak
 RUN --mount=type=tmpfs,target=/root/.cargo \
 #    pip3 install cryptography \
     cp -R /root/.cargo /root/.cargo.bak
-RUN cp -R /root/.cargo.bak /root/.cargo && rm -R /root/.cargo.bak
+RUN cp -R /root/.cargo.bak/ /root/.cargo/ && rm -R /root/.cargo.bak
 
 
 #RUN --mount=type=tmpfs,target=/build \
