--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -44,7 +44,7 @@ ENV PATH="/root/.cargo/bin:$PATH"
 
 RUN cp -R /root/.cargo /root/.cargo.bak
 RUN --mount=type=tmpfs,target=/root/.cargo \
-    ls /root/.cargo -al \
+     ls /root/.cargo -al && \
 #    pip3 install cryptography \
     cp -R /root/.cargo/ /root/.cargo.bak/
 RUN cp -R /root/.cargo.bak/ /root/.cargo/ && rm -R /root/.cargo.bak
