--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -40,16 +40,15 @@ RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 
 RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
-ENV PATH="/root/.cargo/bin:$PATH"
+#ENV export PATH="/root/.cargo/bin:$PATH"
 
-RUN pip3 install cryptography
-
-#RUN cp -r /root/.cargo /root/.cargo.bak
-#RUN --mount=type=tmpfs,target=/root/.cargo \
-#    pip3 install cryptography && \
-#    cp -rT /root/.cargo /root/.cargo.bak
-#RUN cp -rT /root/.cargo.bak /root/.cargo && rm -R /root/.cargo.bak
-
+RUN cp -r /root/.cargo /root/.cargo.bak
+RUN --mount=type=tmpfs,target=/root/.cargo \
+    curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly && \
+    export PATH="/root/.cargo/bin:$PATH" && \
+    pip3 install cryptography && \
+    cp -rT /root/.cargo /root/.cargo.bak
+RUN cp -rT /root/.cargo.bak /root/.cargo && rm -R /root/.cargo.bak
 
 #RUN --mount=type=tmpfs,target=/build \
 #    cp -r /src/. /build/ \
