--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm
@@ -26,7 +26,7 @@ RUN apt-get -y update && apt-get -y upgrade
 # SHELL ["/bin/bash", "-c"]
 
 # Install some optional helper tools
-RUN apt-get -y install mc
+RUN apt-get -y install mc nano vim screen
 
 RUN apt-get install tzdata
 
@@ -36,108 +36,99 @@ RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 # Intsall build essentials
 RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 
-# Build and install Rust and crxptography using a temporary fs (buildkit requiered)
+# Build and install Rust and cryptography and other Python packages using a temporary fs (buildkit requiered)
 # to overcome the qmenu cargo filesystem issue (takes a very long time to complete approx. 20min)
 RUN --mount=type=tmpfs,target=/root/.cargo \
     curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly && \
     export PATH="/root/.cargo/bin:$PATH" && \
     pip3 install cryptography && \
+    pip3 install rns lxmf nomadnet rnodeconf requests && \
+    pip3 Django gunicorn psycopg2-binary gevent && \
     cp -r /root/.cargo /root/.cargo.bak
-RUN cp -r /root/.cargo.bak /root/.cargo && rm -R /root/.cargo.bak
-
-# Install requiered python packages
-RUN pip3 install rns lxmf nomadnet rnodeconf requests pytz Django gunicorn gevent
-#RUN pip3 install rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
-
-# Install some optional helper tools
-RUN apt-get -y install nano vim screen
+RUN cp -rT /root/.cargo.bak /root/.cargo && rm -R /root/.cargo.bak
 
 ##########
 
 # Install components for django production deplyment
-#RUN apt-get -y install systemctl uwsgi uwsgi-plugin-python3 nginx
-#RUN apt-get -y install nginx systemctl &&\
-#    systemctl enable nginx
+RUN apt-get -y install systemctl uwsgi uwsgi-plugin-python3 nginx
+RUN apt-get -y install nginx systemctl &&\
+    systemctl enable nginx
 
 # Install TNC for radio networking (direwolf)
-#RUN apt-get -y install direwolf
+RUN apt-get -y install direwolf
 
 # grab gosu for easy step-down from root and check if it works
-#RUN	apt-get install -y gosu &&\
-#   	rm -rf /var/lib/apt/lists/* &&\
-#      gosu nobody true
+RUN	apt-get install -y gosu &&\
+   	rm -rf /var/lib/apt/lists/* &&\
+    gosu nobody true
 
 # Add local user 'bsb'
-#RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
+RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
 # Grant him sudo privileges
 #RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
 #    chmod 0440 /etc/sudoers.d/bsb
 
 # Set Home dir and path fpr user bsb
-#ENV HOME /home/bsb
-#ENV PATH="$HOME/.local/bin:$PATH"
-#ENV HOME /home/bsb
-#USER bsb
-#WORKDIR $HOME
-
-
-# Install requiered python packages
-#RUN pip3 install rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
+ENV HOME /home/bsb
+ENV PATH="$HOME/.local/bin:$PATH"
+ENV HOME /home/bsb
+USER bsb
+WORKDIR $HOME
 
 # Change to root
-#USER root
+USER root
 # Copy ressources from context into bsb home
-#ARG CACHEBUST=1
-#COPY . .
+ARG CACHEBUST=1
+COPY . .
 # Set ownership to usr bsb
-#RUN chown -R bsb:bsb $HOME
+RUN chown -R bsb:bsb $HOME
 # Make some scripts executable
-#RUN chmod +x entrypoint.sh &&\
-#    chmod +x start.sh &&\
-#    chmod +x start_django.sh
+RUN chmod +x entrypoint.sh &&\
+    chmod +x start.sh &&\
+    chmod +x start_django.sh
 # Move script to bin
-#RUN mv entrypoint.sh /usr/local/bin &&\
-#    mv start.sh /usr/local/bin &&\
-#    mv start_django.sh /usr/local/bin
+RUN mv entrypoint.sh /usr/local/bin &&\
+    mv start.sh /usr/local/bin &&\
+    mv start_django.sh /usr/local/bin
 
 # Change to bsb again to install python packages indicated at the rerquirents.txt
 # This will be done without cache usage
-#USER bsb
-#WORKDIR $HOME
+USER bsb
+WORKDIR $HOME
 
 # Install required python packages
-#RUN pip3 install -r ./requirements.txt
+RUN pip3 install -r ./requirements.txt
 
 # Move to Django
-#WORKDIR $HOME/nexus_django
+WORKDIR $HOME/nexus_django
 # Make manage.py executable
-#RUN chmod +x manage.py
+RUN chmod +x manage.py
 # Create folder for static files
-#RUN mkdir static
+RUN mkdir static
 
 # Collect static files
-#RUN python manage.py collectstatic --no-input --clear
-#RUN ./manage.py collectstatic --no-input --clear &&\
-#    ./manage.py flush --no-input
+RUN python manage.py collectstatic --no-input --clear
+RUN ./manage.py collectstatic --no-input --clear &&\
+    ./manage.py flush --no-input
 
 # Back to root to finalize stuff
-#USER root
-#WORKDIR $HOME
+USER root
+WORKDIR $HOME
 
 # Configure Nginx
-#RUN rm /etc/nginx/sites-enabled/default &&\
-#    ln -s /home/bsb/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
+RUN rm /etc/nginx/sites-enabled/default &&\
+    ln -s /home/bsb/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
 
 # Expose port for Reticulum server TCP Interface (disable as default)
-#ENV NEXUS_CONTAINER_RNS_PORT 4242
-#EXPOSE $NEXUS_CONTAINER_RNS_PORT
+ENV NEXUS_CONTAINER_RNS_PORT 4242
+EXPOSE $NEXUS_CONTAINER_RNS_PORT
 
 # Expose port for Nexus Server Web (Nginx)
-#ENV NEXUS_CONTAINER_WEB_PORT 4280
-#EXPOSE $NEXUS_CONTAINER_WEB_PORT
+ENV NEXUS_CONTAINER_WEB_PORT 4280
+EXPOSE $NEXUS_CONTAINER_WEB_PORT
 
 # Expose port for Nexus Server API (Gunicorn / Python)
-#ENV NEXUS_CONTAINER_API_PORT 4281
-#EXPOSE $NEXUS_CONTAINER_API_PORT
+ENV NEXUS_CONTAINER_API_PORT 4281
+EXPOSE $NEXUS_CONTAINER_API_PORT
 
-#ENTRYPOINT ["entrypoint.sh"]
+ENTRYPOINT ["entrypoint.sh"]
