--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm64
@@ -65,8 +65,8 @@ RUN	apt-get install -y gosu &&\
 # Add local user 'bsb'
 RUN groupadd -r bsb --gid=9001 && useradd -r -g bsb -m --uid=9001 bsb
 # Grant him sudo privileges
-#RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
-#    chmod 0440 /etc/sudoers.d/bsb
+RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
+    chmod 0440 /etc/sudoers.d/bsb
 
 # Set Home dir and path fpr user bsb
 ENV HOME /home/bsb
