--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_auto_linux-arm64
@@ -34,7 +34,7 @@ RUN apt-get install tzdata
 RUN curl -sS https://bootstrap.pypa.io/get-pip.py | python3
 
 # Intsall build essentials
-RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
+RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2 libpq-dev
 
 # Build and install Rust and cryptography and other Python packages using a temporary fs (buildkit requiered)
 # to overcome the qmenu cargo filesystem issue (takes a very long time to complete approx. 20min)
